[workspace]
members = [
    "authn",
    "core",
    "example",
    "geo",
    "queue",
    "smtp",
]
resolver = "2"

[workspace.dependencies]
async-session = "3"
async-trait = "0.1"
axum = "0.6"
base64 = "0.22"
bcrypt = "0.17"
bytes = "1.10"
derivative = "2.2"
derive-getters = "0.5.0"
derive_more = { version = "2.0.1", default-features = false }
env_logger = "0.11"
futures = "0.3"
http = "0.2.12"
http-body = "0.4"
hyper = { version = "0.14", features = ["full"] }
lettre = { version = "0.11.15", default-features = false }
log = "0.4"
lru_time_cache = "0.11"
mime = "0.3"
paste = "1.0"
quoted_printable = "0.5"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
serde_test = "1"
serde_urlencoded = "0.7"
serde = { version = "1", features = ["derive"] }
sqlx = "0.8"
temp-env = "0.3.6"
thiserror = "2.0"
time = "0.3"
tokio = "1"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
url = "2.5"
uuid = { version = "1.16", default-features = false, features = ["serde", "std", "v4"] }
