[workspace]
members = [
    "authn",
    "core",
    "example",
    "geo",
    "queue",
    "smtp",
]
resolver = "2"

[workspace.lints.rust]
anonymous_parameters = "warn"
bad_style = "warn"
missing_docs = "warn"
unsafe_code = "warn"
unused = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
collapsible_if = "allow"
missing_docs_in_private_items = "warn"

[workspace.dependencies]
async-session = "3"
async-trait = "0.1"
axum = "0.8"
axum-server = "0.8"
base64 = "0.22"
bcrypt = "0.19"
bytes = "1"
derivative = "2.2"
derive-getters = "0.5.0"
derive_more = { version = "2", default-features = false }
env_logger = "0.11"
futures = "0.3"
http = "1"
http-body = "1.0"
hyper = { version = "1", features = ["full"] }
lettre = { version = "0.11", default-features = false }
log = "0.4"
lru_time_cache = "0.11"
mime = "0.3"
paste = "1.0"
quoted_printable = "0.5"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["query", "rustls"] }
serde_json = "1"
serde_test = "1"
serde_urlencoded = "0.7"
serial_test = "3.0"
serde = { version = "1", features = ["derive"] }
sqlx = "0.8"
temp-env = "0.3.6"
thiserror = "2.0"
time = "0.3"
tokio = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5"
uuid = { version = "1", default-features = false, features = ["serde", "std", "v4"] }
