[package]
name = "iii-iv-authn"
version = "0.0.0"
description = "III-IV: Simple authentication support"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = ["postgres"]
postgres = ["dep:iii-iv-postgres", "sqlx/postgres"]
sqlite = ["dep:futures", "dep:iii-iv-sqlite", "sqlx/sqlite"]
testutils = []

[dependencies]
async-trait = "0.1"
axum = "0.6"
base64 = "0.21"
bcrypt = "0.14"
derivative = "2.2"
futures = { version = "0.3", optional = true }
rand = "0.8"
http = "0.2.8"
iii-iv-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
time = "0.3"

[dependencies.iii-iv-lettre]
git = "https://github.com/jmmv/iii-iv.git"
rev = "1bc3fea06ddb9f19df4470b46e51ff69ff37857e"

[dependencies.iii-iv-postgres]
git = "https://github.com/jmmv/iii-iv.git"
rev = "1bc3fea06ddb9f19df4470b46e51ff69ff37857e"
optional = true

[dependencies.iii-iv-sqlite]
git = "https://github.com/jmmv/iii-iv.git"
rev = "1bc3fea06ddb9f19df4470b46e51ff69ff37857e"
optional = true

[dependencies.sqlx]
version = "0.6"
optional = true
features = ["runtime-tokio-rustls", "time"]

[dev-dependencies]
futures = "0.3"
iii-iv-core = { path = "../core", features = ["testutils"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies.iii-iv-lettre]
git = "https://github.com/jmmv/iii-iv.git"
rev = "1bc3fea06ddb9f19df4470b46e51ff69ff37857e"
features = ["testutils"]

[dev-dependencies.iii-iv-postgres]
git = "https://github.com/jmmv/iii-iv.git"
rev = "1bc3fea06ddb9f19df4470b46e51ff69ff37857e"
features = ["testutils"]

[dev-dependencies.iii-iv-sqlite]
git = "https://github.com/jmmv/iii-iv.git"
rev = "1bc3fea06ddb9f19df4470b46e51ff69ff37857e"
features = ["testutils"]

[dev-dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "time"]
