[package]
name = "iii-iv-authn"
version = "0.0.0"
description = "III-IV: Simple authentication support"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = ["postgres"]
postgres = ["dep:iii-iv-postgres", "sqlx/postgres"]
sqlite = ["dep:futures", "dep:iii-iv-sqlite", "sqlx/sqlite"]
testutils = []

[dependencies]
async-trait = "0.1"
axum = "0.6"
base64 = "0.21"
bcrypt = "0.14"
derivative = "2.2"
futures = { version = "0.3", optional = true }
rand = "0.8"
http = "0.2.8"
iii-iv-core = { path = "../core" }
iii-iv-lettre = { path = "../lettre" }
iii-iv-postgres = { path = "../postgres", optional = true }
iii-iv-sqlite = { path = "../sqlite", optional = true }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
time = "0.3"

[dependencies.sqlx]
version = "0.6"
optional = true
features = ["runtime-tokio-rustls", "time"]

[dev-dependencies]
futures = "0.3"
iii-iv-core = { path = "../core", features = ["testutils"] }
iii-iv-lettre = { path = "../lettre", features = ["testutils"] }
iii-iv-postgres = { path = "../postgres", features = ["testutils"] }
iii-iv-sqlite = { path = "../sqlite", features = ["testutils"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.3"

[dev-dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "time"]
