[package]
name = "iii-iv-authn"
version = "0.0.0"
description = "III-IV: Simple authentication support"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = ["postgres"]
postgres = ["iii-iv-core/postgres", "sqlx/postgres"]
sqlite = ["iii-iv-core/sqlite", "sqlx/sqlite"]
testutils = ["dep:url", "iii-iv-core/sqlite", "iii-iv-core/testutils", "iii-iv-smtp/testutils"]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
iii-iv-core = { path = "../core" }
iii-iv-smtp = { path = "../smtp" }
log = { workspace = true }
lru_time_cache = { workspace = true }
rand = { workspace = true }
serde_urlencoded = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
url = { workspace = true, optional = true }

[dependencies.sqlx]
workspace = true
optional = true
features = ["runtime-tokio-rustls", "time"]

[dev-dependencies]
futures = { workspace = true }
iii-iv-core = { path = "../core", features = ["sqlite", "testutils"] }
iii-iv-smtp = { path = "../smtp", features = ["testutils"] }
temp-env = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
url = { workspace = true }

[dev-dependencies.sqlx]
workspace = true
features = ["runtime-tokio-rustls", "sqlite", "time"]
