[package]
name = "iii-iv-core"
version = "0.0.0"
description = "III-IV: Core abstractions and types"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = []
internal = []
testutils = [
    "dep:base64",
    "dep:bytes",
    "dep:http-body",
    "dep:hyper",
    "dep:mime",
    "dep:paste",
    "dep:regex",
    "dep:tower",
]

[dependencies]
async-trait = "0.1"
axum = "0.6"
base64 = { version = "0.13", optional = true }
bytes = { version = "1.0", optional = true }
derivative = "2.2"
http = "0.2.8"
http-body = { version = "0.4", optional = true }
hyper = { version = "0.14", optional = true, features = ["full"] }
mime = { version = "0.3", optional = true }
paste = { version = "1.0", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
time = "0.3"
tower = { version = "0.4", optional = true }

[dev-dependencies]
paste = "1.0"
tokio = { version = "1", features = ["macros"] }
