[package]
name = "iii-iv-core"
version = "0.0.0"
description = "III-IV: Core abstractions and types"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = []
postgres = [
    "dep:futures",
    "dep:log",
    "dep:rand",
    "dep:regex",
    "dep:tokio",
    "sqlx/postgres",
    "sqlx/runtime-tokio-rustls",
]
sqlite = [
    "dep:futures",
    "dep:log",
    "dep:tokio",
    "sqlx/sqlite",
    "sqlx/runtime-tokio-rustls",
]
testutils = [
    "dep:base64",
    "dep:bytes",
    "dep:env_logger",
    "dep:http-body",
    "dep:hyper",
    "dep:mime",
    "dep:paste",
    "dep:rand",
    "dep:regex",
    "dep:serde_urlencoded",
    "dep:tower",
]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
derivative = { workspace = true }
env_logger = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http = { workspace = true }
hyper = { workspace = true, optional = true }
log = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
paste = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true, optional = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
url = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
serde_test = { workspace = true }
temp-env = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
