[package]
name = "iii-iv-example"
version = "0.0.0"
description = "III-IV: Sample service and template"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[dependencies]
async-session = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
derive-getters = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dependencies.iii-iv-core]
path = "../core"
features = ["postgres"]

[dependencies.derive_more]
workspace = true
features = ["as_ref", "constructor"]

[dev-dependencies.iii-iv-core]
path = "../core"
features = ["sqlite", "testutils"]
