[package]
name = "iii-iv-geo"
version = "0.0.0"
description = "III-IV: Geolocation features"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2024"
publish = false

[features]
default = []
testutils = []

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
iii-iv-core = { path = "../core" }
log = { workspace = true }
lru_time_cache = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
time = { workspace = true }

[dev-dependencies]
iii-iv-core = { path = "../core", features = ["testutils"] }
serde_test = { workspace = true }
temp-env = { workspace = true }
time = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
