[package]
name = "iii-iv-lettre"
version = "0.0.0"
description = "III-IV: SMTP support"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = []
testutils = ["dep:futures", "dep:quoted_printable"]

[dependencies]
async-trait = "0.1"
axum = "0.6"
derivative = "2.2"
futures = { version = "0.3", optional = true }
http = "0.2.8"
quoted_printable = { version = "0.5", optional = true }
serde_json = "1"
thiserror = "1.0"
time = "0.3"
iii-iv-core = { path = "../core" }

[dependencies.lettre]
version = "0.10.0-rc.6"
default-features = false
features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport", "tokio1-rustls-tls"]

[dev-dependencies]
futures = "0.3"
iii-iv-core = { path = "../core", features = ["testutils"] }
quoted_printable = "0.5"
temp-env = "0.3.2"
tokio = { version = "1", features = ["macros"] }
