[package]
name = "iii-iv-lettre"
version = "0.0.0"
description = "III-IV: SMTP support"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = []
testutils = ["dep:futures", "dep:quoted_printable"]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true, optional = true }
http = { workspace = true }
iii-iv-core = { path = "../core" }
quoted_printable = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dependencies.lettre]
workspace = true
features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport", "tokio1-rustls-tls"]

[dev-dependencies]
futures = { workspace = true }
iii-iv-core = { path = "../core", features = ["testutils"] }
quoted_printable = { workspace = true }
temp-env = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
