[package]
name = "iii-iv-postgres"
version = "0.0.0"
description = "III-IV: PostgreSQL support"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = []
testutils = ["dep:env_logger", "dep:rand"]

[dependencies]
async-trait = "0.1"
derivative = "2.2"
env_logger = { version = "0.8", optional = true }
rand = { version = "0.8", optional = true }
regex = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
iii-iv-core = { path = "../core" }

[dev-dependencies]
env_logger = "0.8"
rand = "0.8"
tokio = { version = "1", features = ["macros"] }
iii-iv-core = { path = "../core", features = ["internal", "testutils"] }
temp-env = "0.3.2"
