[package]
name = "iii-iv-queue"
version = "0.0.0"
description = "III-IV: Database-backed queue for tasks"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = ["postgres"]
postgres = ["iii-iv-core/postgres", "sqlx/postgres", "sqlx/time", "sqlx/uuid"]
sqlite = ["iii-iv-core/sqlite", "sqlx/sqlite", "sqlx/time", "sqlx/uuid"]
testutils = []

[dependencies]
async-trait = "0.1"
axum = "0.6"
derivative = "2.2"
futures = "0.3"
iii-iv-core = { path = "../core" }
log = "0.4"
serde = "1"
serde_json = "1"
time = "0.3"
tokio = "1"
uuid = { version = "1.0", default-features = false, features = ["serde", "std", "v4"] }

[dependencies.sqlx]
version = "0.7"
optional = true
features = ["runtime-tokio-rustls", "time"]

[dev-dependencies]
iii-iv-core = { path = "../core", features = ["sqlite", "testutils"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "sqlite", "time", "uuid"]
