[package]
name = "iii-iv-queue"
version = "0.0.0"
description = "III-IV: Database-backed queue for tasks"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = ["postgres"]
postgres = ["iii-iv-core/postgres", "sqlx/postgres", "sqlx/time", "sqlx/uuid"]
sqlite = ["iii-iv-core/sqlite", "sqlx/sqlite", "sqlx/time", "sqlx/uuid"]
testutils = []

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
iii-iv-core = { path = "../core" }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dependencies.sqlx]
workspace = true
optional = true
features = ["runtime-tokio-rustls", "time"]

[dev-dependencies]
iii-iv-core = { path = "../core", features = ["sqlite", "testutils"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies.sqlx]
workspace = true
features = ["runtime-tokio-rustls", "sqlite", "time", "uuid"]
