[package]
name = "iii-iv-smtp"
version = "0.0.0"
description = "III-IV: SMTP support"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2024"
publish = false

[features]
default = ["postgres"]
postgres = ["dep:sqlx", "iii-iv-core/postgres", "sqlx/postgres"]
sqlite = ["dep:sqlx", "iii-iv-core/sqlite", "sqlx/sqlite"]
testutils = ["dep:futures", "dep:env_logger", "dep:quoted_printable", "iii-iv-core/sqlite"]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
derivative = { workspace = true }
env_logger = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
http = { workspace = true }
iii-iv-core = { path = "../core" }
quoted_printable = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dependencies.lettre]
workspace = true
features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport", "tokio1-rustls-tls"]

[dependencies.sqlx]
version = "0.8"
optional = true
features = ["runtime-tokio-rustls", "time"]

[dev-dependencies]
env_logger = { workspace = true }
futures = { workspace = true }
iii-iv-core = { path = "../core", features = ["sqlite", "testutils"] }
quoted_printable = { workspace = true }
temp-env = { workspace = true }
time = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies.sqlx]
workspace = true
features = ["runtime-tokio-rustls", "sqlite", "time"]
