[package]
name = "iii-iv-sqlite"
version = "0.0.0"
description = "III-IV: SQLite support"
authors = ["Julio Merino <julio@meroh.net>"]
edition = "2021"
publish = false

[features]
default = []
testutils = ["dep:env_logger"]

[dependencies]
async-trait = "0.1"
derivative = "2.2"
env_logger = { version = "0.8", optional = true }
futures = "0.3"
iii-iv-core = { path = "../core" }
serde_json = "1"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
time = "0.3"

[dev-dependencies]
env_logger = "0.8"
iii-iv-core = { path = "../core", features = ["internal", "testutils"] }
tokio = { version = "1", features = ["macros"] }
